# rl-mdp2

./: README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile
notebooks/: guide_mdp_class.ipynb
rl_mdp/: main.py  util.py
rl_mdp/bellman/: bellmanequationsolver.py
rl_mdp/dynamic_programming/: dynamicprogrammingsolver.py
rl_mdp/mdp/: abstract_mdp.py  mdp.py  reward_function.py  transition_function.py
rl_mdp/model_free_prediction/: abstract_evaluator.py  monte_carlo_evaluator.py  td_evaluator.py  td_lambda_evaluator.py
rl_mdp/policy/: abstract_policy.py  policy.py
